99_yaml/old/02_bluejay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluejay
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluejay
  template:
    metadata:
      labels:
        app: bluejay
        webapp: moqku.co
    spec:
      containers:
      - name: bluejay
        image: victorbnnt/personal:bluejayubuntu
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bluejay
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bluejay
