99_yaml/old/03_homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
        webapp: moqku.co
    spec:
      containers:
      - name: homepage
        image: victorbnnt/personal:homepage
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: ingress-nginx
  labels:
    webapp: moqku.co
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: homepage
